--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,15 @@ theme: minima
 plugins:
   - jekyll-feed
 
+#### Default Attributes
+defaults:
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
